--- a/secondClient/package.json
+++ b/secondClient/package.json
@@ -15,6 +15,7 @@
     "@ant-design/plots": "^1.2.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fingerprintjs/fingerprintjs": "^3.4.1",
     "antd": "^5.4.5",
     "axios": "^1.1.3",
     "axios-retry": "^3.4.0",
