--- a/secondClient/package.json
+++ b/secondClient/package.json
@@ -16,9 +16,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fingerprintjs/fingerprintjs": "^3.4.1",
+    "@types/bcryptjs": "^2.4.2",
     "antd": "^5.4.5",
     "axios": "^1.1.3",
     "axios-retry": "^3.4.0",
+    "bcryptjs": "^2.4.3",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "mobx-utils": "^6.0.5",
